[package]
name = "get_config"
version = "0.1.1"
edition = "2021"
description = "A simple function to get config from a file"
license = "MIT"
repository = "https://github.com/Banyc/get_config"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.156", features = ["derive"] }
thiserror = "1.0.39"
toml = "0.7.3"
